# private-room

./: .gitignore  .mcp.json  CHANGELOG.md  MOONSHOT-QA.md  README.md  RELEASING.md  TESTING.md  UIUX-TASK.md  index.html  package-lock.json  package.json
art/: README.md
docs/: pledge.md  roomai-spec.md
e2e/: README.md  mock-ollama.mjs  wdio.conf.mjs
e2e/fixtures/: data.csv  notes.txt
e2e/specs/: smoke.e2e.mjs
pm-request/: IMPLEMENTATION-STATUS.md  README.md  feature-audit-2026-07-18-summary.md  ideas-triage-2026-07-18.md  master-plan-2026-07-18.md  moonshot-2026-07-06.md  part-1-security.md  part-2-features-to-add.md  part-3-things-to-change.md  part-4-ux-polish.md  part-5-project-health.md  part-6-remove-cleanup.md  part-7-long-term-ideas.md  vision-excellence-plan-2026-07-16.md
pm-request/rebrand/: rebrand-proposal-2026-07-18.md
public/: rec-worklet.js
qa/: UA-FEATURE-CHECKLIST.md  make-qa.mjs  qa-mock.js
scripts/: macsign.sh  release.sh  tts_preview.sh
sidecar/: MIGRATION-SPEC.md  SPEC.md  arcelle-sidecar.spec  build-sidecar.sh  launch.py  privateroom-sidecar.spec  pyproject.toml
sidecar/arcelle_sidecar/: __init__.py  __main__.py  ai_actions.py  chat.py  chat_docs.py  config.py  external_llm.py  features.py  file_pass.py  graph.py  handoff.py  labels.py  llm.py  mcp_client.py  messages.py  model_limits.py  privacy.py  prompts.py  provider_api.py  routing.py  server.py  summarize.py  tts.py  usage.py  vision.py
sidecar/privateroom_sidecar/: __init__.py  __main__.py  ai_actions.py  budget.py  chat.py  chat_docs.py  config.py  external_llm.py  features.py  file_pass.py  graph.py  labels.py  llm.py  mcp_client.py  messages.py  privacy_scan.py  prompts.py  routing.py  server.py  studios.py  summarize.py  vision.py
sidecar/tests/: conftest.py  test_ai_actions.py  test_budget.py  test_chat.py  test_chat_docs.py  test_external_llm.py  test_features.py  test_file_pass.py  test_graph.py  test_handoff.py  test_integration.py  test_labels.py  test_llm.py  test_mcp_client.py  test_model_limits.py  test_privacy.py  test_privacy_gate.py  test_provider_api.py  test_routing.py  test_server.py  test_studios.py  test_summarize.py  test_tts.py  test_vision.py
src/: App.css  App.tsx  Settings.tsx  Workspace.tsx  api.ts  apiTypes.ts  icons.tsx  main.tsx  seal.css  settingsA11y.css  theme.ts  updater.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  dmg-background.tiff  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: document.icns  icon.icns
src-tauri/src/: biometrics.rs  commands.rs  db.rs  extraction.rs  lib.rs  main.rs  mcp.rs  model_limits.rs  ocr.rs  ollama.rs  ollama_lifecycle.rs  recording.rs  room_mcp.rs  sidecar.rs  sidecar_lifecycle.rs  snapshot.rs  speech.rs  stt.rs  token_usage.rs  web.rs
src-tauri/src/commands/: agent.rs  agent_ui.rs  chat.rs  chat_commands.rs  docs_html.rs  edit_gate.rs  edit_match.rs  external.rs  feedback.rs  files.rs  jobs.rs  json.rs  library.rs  mcp_cmds.rs  mcp_oauth.rs  mcp_registry.rs  media.rs  models.rs  moonshot.rs  privacy.rs  providers.rs  recent.rs  recording_cmds.rs  retrieval.rs  room_checkpoints.rs  rooms.rs  runtimes.rs  safety.rs  scripts.rs  search.rs  skills.rs  speech_cmds.rs  spreadsheet.rs  stt_cmds.rs  studios.rs  summarize.rs  vision.rs  ytdlp.rs
src-tauri/src/commands/chat_commands/: generate.rs  knowledge.rs
src-tauri/src/commands/docs_html/: minutes.rs
src-tauri/src/commands/jobs/: auto_index.rs  file_pass.rs  queue.rs  scheduler.rs  script_run.rs  workflow.rs
src-tauri/src/commands/moonshot/: ai_actions.rs  discovery.rs  front_page.rs  graph.rs  roles.rs  server.rs
src-tauri/src/commands/retrieval/: backfill.rs
src-tauri/src/commands/studios/: flashcards.rs  mindmap.rs  podcast.rs
src-tauri/src/db/: chats.rs  embeddings.rs  files.rs  folders.rs  jobs.rs  memories.rs  messages.rs  meta.rs  privacy.rs  recordings.rs  schema.rs  settings.rs  skills.rs  util.rs  versions.rs  web_cache.rs  workflows.rs
src-tauri/src/extraction/: chunking.rs  docx.rs  html.rs  pdf.rs  pptx.rs  window.rs  xlsx.rs
src-tauri/src/recording/: diarize.rs  sck.rs
src-tauri/src/recording/diarize/: fbank.rs  titanet.rs
src-tauri/src/web/: fetch.rs  guard.rs  search.rs
src-tauri/tests/: mcp_client.rs  rec_bench.rs  roomai_cli.rs  roomfile.rs  tts_smoke.rs
src/agent/: driver.css  driver.ts
src/icons/: actions.tsx  base.tsx  empty.tsx  features.tsx  files.tsx  nav.tsx  shell.tsx  status.tsx
src/rooms/: constants.ts  helpers.ts
src/screens/: CreateScreen.tsx  RecoveryKeyIcon.tsx  RecoveryModal.tsx  SealOverlay.tsx  StartScreen.tsx  UnlockScreen.tsx
src/settings/: AboutSection.tsx  AdvisorsSection.tsx  AiProvidersSection.tsx  BehaviorSection.tsx  CheckpointsSection.tsx  CloudPrivacySection.tsx  HelpersSection.tsx  McpMarketplace.tsx  McpSection.tsx  ModelSection.tsx  OnlineSection.tsx  PrivacySection.tsx  RecoverySection.tsx  RemoteAiSection.tsx  RoleSection.tsx  RoomServerSection.tsx  ToolBadgeIcon.tsx  VoiceSection.tsx  types.ts  useAdvisors.ts  useBehaviorSettings.ts  useCheckpoints.ts  useFocusTrap.ts  useMcpConfig.ts  useModelManagement.ts  useOnlineSearch.ts  usePrivacy.ts  useRecovery.ts  useRemoteAi.ts  useRoles.ts  useRoomServer.ts  useVoiceSettings.ts
src/shell/: ActivityRail.tsx  Splitter.tsx  StatusBar.tsx  useLayout.ts
src/styles/: base.css  chat.css  composer.css  gate.css  marketplace.css  misc-moonshot-cards.css  misc-moonshot.css  misc.css  onboarding.css  recording.css  scripts.css  settings-annotations.css  settings.css  shell.css  sidebar-folders.css  sidebar-search.css  sidebar.css  skills.css  tokenBudget.css  tokens.css  viewer-formats.css  viewer.css  workflows.css  workspace.css
src/viewers/: AudioView.tsx  ChatAnnotatedImage.tsx  CloudView.tsx  CodeEditor.tsx  DiffPreview.tsx  DiffView.tsx  DocxView.tsx  HtmlView.tsx  ImageView.tsx  MarkdownView.tsx  PdfView.tsx  RecordingView.tsx  RoomMap.tsx  SheetView.tsx  highlight.ts  monacoSetup.ts  roomMap.css  util.ts
src/workspace/: AiActionModal.tsx  AiPane.tsx  (+41 more)
(+29 files in other folders)
