[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "privateroom-sidecar"
version = "0.1.0"
description = "Private Room — local LangGraph agent sidecar (the agent brain only; no DB, no keys, no files)"
readme = "SPEC.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    # MIGRATION Phase 2: image grounding (/vision_locate) reproduces vision.rs
    # `prepare_image` — decode any PNG/JPEG/WebP and stretch it onto the 1000×1000
    # grounding canvas — which needs a real image codec. Pillow is the codec; it
    # is pure-wheel and PyInstaller-bundles cleanly (no system libs required).
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
privateroom-sidecar = "privateroom_sidecar.__main__:main"

[tool.setuptools.packages.find]
include = ["privateroom_sidecar*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]
