[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arcelle-sidecar"
version = "0.7.0"
description = "Arcelle — local LangGraph agent sidecar (the agent brain only; no DB, no keys, no files)"
readme = "SPEC.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "fastapi>=0.110",
    # starlette 1.x removed the on_startup kwarg fastapi (< 1.0) still passes;
    # without this cap uv resolves starlette 1.3.1 and the server cannot start.
    "starlette>=0.40,<1.0",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    # MIGRATION Phase 2: image grounding (/vision_locate) reproduces vision.rs
    # `prepare_image` — decode any PNG/JPEG/WebP and stretch it onto the 1000×1000
    # grounding canvas — which needs a real image codec. Pillow is the codec; it
    # is pure-wheel and PyInstaller-bundles cleanly (no system libs required).
    "pillow>=10.0",
    # Neural spoken voice (default engine): Edge neural TTS. The only network
    # call it makes is the user-facing speech synthesis seam in tts.py.
    "edge-tts>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
arcelle-sidecar = "arcelle_sidecar.__main__:main"

[tool.setuptools.packages.find]
include = ["arcelle_sidecar*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]
