[package]
name = "private-room"
version = "0.1.0"
description = "Private Room — an encrypted local AI workspace in a single file"
authors = ["Ben Reich"]
edition = "2021"

[lib]
name = "private_room_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "rt", "net"] }
futures-util = "0.3"
base64 = "0.22"
sha2 = "0.10"
sysinfo = "0.33"
zip = { version = "2", default-features = false, features = ["deflate"] }
pdf-extract = "0.7"
mime_guess = "2"
imagesize = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
umya-spreadsheet = { version = "3.0.0", default-features = false }

# ADD-14: on-device OCR via Apple's Vision framework (macOS only).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSData",
    "NSDictionary",
    "NSString",
] }
objc2-vision = { version = "0.3", features = [
    "VNRequest",
    "VNRequestHandler",
    "VNRecognizeTextRequest",
    "VNObservation",
] }
objc2-core-foundation = { version = "0.3", features = [
    "CFData",
    "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3", features = [
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    "CGDataProvider",
    "CGImage",
    "CGPDFDocument",
    "CGPDFPage",
] }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
