[package]
name = "arcelle"
version = "0.8.0"
description = "Arcelle — an encrypted local AI workspace in a single file"
authors = ["Ben Reich"]
edition = "2021"
# The package now ships two binaries (the Tauri app + the `roomai` CLI), so the
# bundler needs to be told which one is the app.
default-run = "arcelle"

[lib]
name = "arcelle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ADD-20: tiny offline CLI (roomai verify/info/export) built on the lib crate.
# The Tauri desktop app's default binary (src/main.rs) is unaffected.
[[bin]]
name = "roomai"
path = "src/bin/roomai.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
# Charset-aware decoding of fetched pages (legacy Hebrew sites serve
# windows-1255); already in the tree via reqwest, so this pins nothing new.
encoding_rs = "0.8"
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "rt", "net", "macros"] }
futures-util = "0.3"
base64 = "0.22"
sha2 = "0.10"
# PRIV-1: fast multi-pattern find/replace for the privacy gatekeeper's
# mechanical door (already in the lock as a transitive dep of regex).
aho-corasick = "1"
# Wave 4a (Idea 2): local-time schedule arithmetic (next daily/weekly run,
# DST-aware). Already in the lock as a transitive dep, so this builds offline.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# ADD-19: recovery-key sidecar crypto (AES-256-GCM + PBKDF2). base64/sha2
# above are reused; these three are the only new crypto deps.
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
sysinfo = "0.33"
zip = { version = "2", default-features = false, features = ["deflate"] }
pdf-extract = "0.7"
mime_guess = "2"
imagesize = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
umya-spreadsheet = { version = "3.0.0", default-features = false }
# ADD-18: on-device speech-to-text — whisper.cpp compiled into the app (Metal
# on Apple Silicon). The engine is built in; the model downloads on first use,
# same doctrine as Ollama models (never bundled, nothing else to install).
# `metal` must be requested EXPLICITLY: whisper-rs-sys passes GGML_METAL=OFF
# without it (inverting whisper.cpp's Apple default), silently pinning the
# engine to CPU — 26 s model loads and ~6x-realtime decodes on an M-series.
whisper-rs = { version = "0.16", features = ["metal"] }
# ADD-27: neural speaker embeddings — TitaNet-small ONNX run by pure-Rust
# tract (validated bit-exact against onnxruntime; do NOT swap in `ort`, and do
# not assume tract runs other speaker models correctly — it silently
# mis-executed CAM++). The 38 MB model ships as a bundled resource.
tract-onnx = "0.23.4"

# macOS-only native deps: ADD-14 OCR (Apple Vision) + ADD-11 Touch ID (Keychain)
# + ADD-27 system-audio capture (ScreenCaptureKit) for recording meetings.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
dispatch2 = "0.3"
objc2-core-media = { version = "0.3", features = [
    "CMSampleBuffer",
    "CMBlockBuffer",
    "CMFormatDescription",
] }
objc2-screen-capture-kit = { version = "0.3", features = [
    "SCStream",
    "SCShareableContent",
    "block2",
    "dispatch2",
    "objc2-core-media",
] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSData",
    "NSDictionary",
    "NSError",
    "NSString",
] }
# ADD-25: webview snapshots. block2 carries the ObjC completion-handler block;
# objc2-web-kit exposes WKWebView.takeSnapshotWithConfiguration:; objc2-app-kit
# does the NSImage → NSBitmapImageRep → PNG conversion.
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSBitmapImageRep",
    "NSGraphics",
    "NSImage",
    "NSImageRep",
] }
objc2-web-kit = { version = "0.3", features = [
    "WKSnapshotConfiguration",
    "WKWebView",
    "block2",
] }
# Idea 3: on-device speech synthesis (AVSpeechSynthesizer write-to-buffer —
# no temp files, pitchMultiplier only exists in the API, not in `say`).
# "AVAudioTypes" is required explicitly: AVAudioPCMBuffer::frameLength is
# gated on it and nothing enables it transitively.
objc2-avf-audio = { version = "0.3", features = [
    "AVSpeechSynthesis",
    "AVAudioBuffer",
    "AVAudioFormat",
    "AVAudioTypes",
    "block2",
] }
objc2-vision = { version = "0.3", features = [
    "VNRequest",
    "VNRequestHandler",
    "VNRecognizeTextRequest",
    "VNObservation",
] }
objc2-core-foundation = { version = "0.3", features = [
    "CFData",
    "CFCGTypes",
    # Idea 3: speech synthesis pumps the main run loop when called headless
    # (tests) — AVSpeech's buffer callback rides the main queue.
    "CFRunLoop",
    "CFDate",
] }
objc2-core-graphics = { version = "0.3", features = [
    "CGColorSpace",
    "CGContext",
    "CGBitmapContext",
    "CGDataProvider",
    "CGImage",
    "CGPDFDocument",
    "CGPDFPage",
] }
security-framework = { version = "3", features = ["OSX_10_15"] }
security-framework-sys = "2"
core-foundation = "0.10"
core-foundation-sys = "0.8"

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# ADD-27: mock-app harness for the live-recording engine integration test.
tauri = { version = "2", features = ["test"] }

# Idea 3: AVSpeechSynthesizer delivers write-to-buffer chunks via the main run
# loop, so the on-device synthesis smoke test must OWN the real main thread —
# a harness would run it on a worker and starve the callback queue.
[[test]]
name = "tts_smoke"
harness = false
